--- a/.gitignore
+++ b/.gitignore
@@ -207,10 +207,12 @@ marimo/_lsp/
 __marimo__/
 
 # Local runtime artifacts (SQLite / dev data)
-data/
-src/data/
 
 *.db
 *.db-journal
 *.db-wal
 *.db-shm
+
+/data/*.db
+/data/*.db-*
+!/data/.gitkeep
